# aicheck

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: deepseek.rs  errors.rs  gemini.rs  lib.rs  main.rs  openrouter.rs  ppinfra.rs  siliconflow.rs
