[package]
name = "aicheck"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
indicatif = { version = "0.18.0", features = ["tokio"] }
reqwest = { version = "0.12.22", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
  "fs",
  "macros",
  "net",
  "rt-multi-thread",
] }
tokio-stream = { version = "0.1.17", features = ["time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "fmt",
  "registry",
] }
