[package]
name = "aicheck"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
indicatif = { version = "0.18.3", features = ["tokio"] }
reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
  "fs",
  "macros",
  "net",
  "rt-multi-thread",
] }
tokio-stream = { version = "0.1.17", features = ["time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "registry",
] }
